2002-06-23  Wakaba <w@suika.fam.cx>

	* Charset.pm
	- New name_minimumizers. (Some are moved from 
	Message::MIME::Charset::Jcode.)
	- (%_MINIMUMIZER): New internal hash.
	- Use internal name-minimumizer (with %_MINIMUMIZER)
	if minimumizer is not defined in charset's definition.
	* EncodedWord.pm (decode_ccontent): Order of arguments
	is changed.
	* MediaType.pm: Typo fix.

2002-06-11  wakaba <w@suika.fam.cx>

	* Charset.pm (US-ASCII name-minimumizer): Returns "unknown-8bit"
	when 8bit octets are included.

2002-06-09  wakaba <w@suika.fam.cx>

	* Charset.pm:
	- Support of 'name_minimumizer' property of charset object.
	- (name_minimumize): New function.
	* Encoding.pm (encode_qp): Don't encode inner WSPs within
	tailing WSPs.
	* MediaType.pm: Support of some new media types
	and their parameters.

2002-06-01  wakaba <w@suika.fam.cx>

	* Charset.pm:
	- (encode): Returns minimum charset name if possible.
	- (definition of iso-2022-int-1, us-ascii): mime_text = 1.
	* Encoding.pm (decide_coderange): Returns 'binary'
	when there are lines consist of more than 998 octets.

2002-05-30  wakaba <w@suika.fam.cx>

	* Charset.pm:
	- (%ENCODER, %DECODER, %N11NTABLE): Removed.
	- (%CHARSET): New hash.
	- (make_charset): New function.
	* Encoding.pm:
	- (decide_coderange): Checks media-type.
	- (uuencode): Typo fix.

2002-05-29  wakaba <w@suika.fam.cx>

	* MediaType.pm, Encoding.pm: New modules.

2002-05-25  wakaba <w@suika.fam.cx>

	* Makefile: New file.
	* EncodedWord.pm: 
	- Procedes trailing WSP correctly.
	- Don't fail with unknown error.

2002-03-25  wakaba <w@suika.fam.cx>

	* Charset.pm, EncodedWord.pm: New modules.
	* ChangeLog: New file.