@@ -8,7 +8,7 @@ Message::MIME::Encoding --- Encoding (MIME CTE, HTTP encodings, etc) definitions
 package Message::MIME::Encoding;
 use strict;
 use vars qw($VERSION);
-$VERSION=do{my @r=(q$Revision: 1.4 $=~/\d+/g);sprintf "%d."."%02d" x $#r,@r};
+$VERSION=do{my @r=(q$Revision: 1.5 $=~/\d+/g);sprintf "%d."."%02d" x $#r,@r};
 
 our %ENCODER = (
 	'7bit'	=> sub { ($_[1], decide_coderange (@_[0,1,2])) },
@@ -102,6 +102,7 @@ sub encode_qp ($$) {
       sprintf '=%02X', ord($1)
       #join('', map { sprintf('=%02X', ord($_)) } split('', $1) )
     /egm;                        # rule #3 (encode whitespace at eol)
+    $s =~ s/=0D=0AFrom/\x0D\x0A=46rom/g;
     $s =~ s/=0D=0A/\x0D\x0A/g;
   } else {
     $s =~ s/([\x09\x20])$/
@@ -253,7 +254,7 @@ Boston, MA 02111-1307, USA.
 =head1 CHANGE
 
 See F<ChangeLog>.
-$Date: 2002/06/09 11:13:14 $
+$Date: 2002/07/02 06:36:26 $
 
 =cut
 
