@@ -1,3 +1,8 @@
+2002-07-02  Wakaba <w@suika.fam.cx>
+
+	* MediaType.pm: 'text_content' property is given to
+	some media types.
+
 2002-06-23  Wakaba <w@suika.fam.cx>
 
 	* Charset.pm
